first set of the pages and some css, all connections working

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,73 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-   
+    <p>
+        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
+        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
+        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
+        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
+        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
+        at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
+        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
+        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
+        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
+        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
+        Quisque at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        Another paragraph vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim viverra ligula, sit amet tempus ligula placerat id. Duis ut elit blandit velit molestie
+        vehicula. Vestibulum volutpat neque at nisi pharetra ut lacinia orci tristique. Cras leo purus, mollis feugiat
+        sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
+        Nullam at imperdiet leo.
+    </p>
+    <p>
+        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
+        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
+        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
+        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
+        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
+        at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
+        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
+        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
+        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
+        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
+        Quisque at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        Another paragraph vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim viverra ligula, sit amet tempus ligula placerat id. Duis ut elit blandit velit molestie
+        vehicula. Vestibulum volutpat neque at nisi pharetra ut lacinia orci tristique. Cras leo purus, mollis feugiat
+        sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
+        Nullam at imperdiet leo.
+    </p>
+    <p>
+        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
+        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
+        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
+        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
+        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
+        at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
+        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
+        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
+        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
+        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
+        Quisque at dolor in quam sagittis dapibus et in mi.
+    </p>
+    <p>
+        Another paragraph vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim viverra ligula, sit amet tempus ligula placerat id. Duis ut elit blandit velit molestie
+        vehicula. Vestibulum volutpat neque at nisi pharetra ut lacinia orci tristique. Cras leo purus, mollis feugiat
+        sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
+        Nullam at imperdiet leo.
+    </p>
 </div>
