first commit, views , controllers and working on repos

--- a/Views/Info/CovidInfo.cshtml
+++ b/Views/Info/CovidInfo.cshtml
@@ -3,4 +3,56 @@
 *@
 @{
 }
+<br />
+<br />
 <h1>News Related to Covid </h1>
+<div>
+    <section>
+
+        <aside>
+            <h3>Be cautious!</h3>
+
+            <div class="row">
+                <div class="col-sm-4"><img src="~/images/VirusMask.jpg" width="300" class="img-left" /></div>
+                <div class="col-sm-8">
+                    <p>
+
+                        An aside lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Mauris in mi mauris. Pellentesque habitant
+                        morbi tristique senectus et netus et malesuada fames
+                        ac turpis egestas. Aenean adipiscing, odio at feugiat
+                        mattis, mi quam rhoncus enim, a tincidunt orci erat et
+                        felis. In vel erat ac lorem faucibus interdum. Fusce
+                        euismod ultrices velit et condimentum. In nec quam
+                        sed felis pharetra pulvinar vel et sapien. Sed nec purus
+                        purus. Suspendisse hendrerit sapien nec est egestas
+                        ut blandit neque molestie. Aliquam erat volutpat. Quisque
+                        at dolor in quam sagittis dapibus et in mi.
+                    </p>
+                </div>
+
+            </div>
+
+
+        </aside>
+        <h3 float="center">Check the lastest news:</h3>
+        <br />
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="https://www.oregonlive.com/coronavirus/2021/03/coronavirus-in-oregon-402-new-cases-and-3-deaths-as-risk-of-increased-spread-looms.html">News In Oregon </a>
+            </div>
+                <br />
+                <div class="col-sm-6">
+                    <a href="https://www.dailyemerald.com/news/lane-county-drops-to-moderate-risk-category-for-covid-19/article_bfc1dd62-82ec-11eb-b7cd-d7622cb30b22.html">News In Lane</a>
+                </div>
+                </div>
+            <p>
+            A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
+            habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
+            feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
+            Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
+            purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
+            Quisque at dolor in quam sagittis dapibus et in mi.
+        </p>
+    </section>
+</div>
