--- a/Views/Shared/AccessDenied.cshtml
+++ b/Views/Shared/AccessDenied.cshtml
@@ -2,4 +2,10 @@
     ViewBag.Title = " Access Denied";
 
 }
-<h2>Access Denied</h2>
+<br />
+<br />
+<h2>
+    Access Denied: You need higher credentials
+</h2>
+
+<img src="~/images/Compass.jpg" alt="COMPASS" width="800" height="600" />
