--- a/Views/Info/CovidInfo.cshtml
+++ b/Views/Info/CovidInfo.cshtml
@@ -13,8 +13,8 @@
             <h3>Be cautious!</h3>
 
             <div class="row">
-                <div class="col-sm-4"><img src="~/images/VirusMask.jpg" width="300" class="img-left" /></div>
-                <div class="col-sm-8">
+                <div class="col-md-6"><img src="~/images/PANO_20190817_134858.jpg" width="200" /></div>
+                <div class="col-md-6">
                     <p>
 
                         An aside lorem ipsum dolor sit amet, consectetur
@@ -28,6 +28,14 @@
                         purus. Suspendisse hendrerit sapien nec est egestas
                         ut blandit neque molestie. Aliquam erat volutpat. Quisque
                         at dolor in quam sagittis dapibus et in mi.
+                    </p>
+                    <p>
+                        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
+                        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
+                        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
+                        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
+                        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
+                        Quisque at dolor in quam sagittis dapibus et in mi.
                     </p>
                 </div>
 
@@ -46,13 +54,6 @@
                     <a href="https://www.dailyemerald.com/news/lane-county-drops-to-moderate-risk-category-for-covid-19/article_bfc1dd62-82ec-11eb-b7cd-d7622cb30b22.html">News In Lane</a>
                 </div>
                 </div>
-            <p>
-            A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
-            habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
-            feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
-            Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
-            purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
-            Quisque at dolor in quam sagittis dapibus et in mi.
-        </p>
+        
     </section>
 </div>
