--- a/Views/Shared/Login.cshtml
+++ b/Views/Shared/Login.cshtml
@@ -7,7 +7,7 @@
 <h2>Login</h2>
 
 <div asp-validation-summary="All" class="text-danger"></div>
-<form method="post" asp-action="LogIn" asp-route-returnUrl="@Model.ReturnUrl">
+<form method="post"asp-controller="Account" asp-action="LogIn" asp-route-returnUrl="@Model.ReturnUrl">
 
 
     <div class="form-group row">
