--- a/Views/Info/Index.cshtml
+++ b/Views/Info/Index.cshtml
@@ -4,5 +4,19 @@
 @{
 }
 <h1>Info Page</h1>
-<a class="nav-link text-dark" asp-area="" asp-controller="Info" asp-action="CovidInfo">Information about covid19</a>
-<a class="nav-link text-dark" asp-area="" asp-controller="Info" asp-action="Weather">Quick info about weather</a>
+<div class="row">
+    <div class="col-md-5">
+        <h4>Some info about Covid:</h4>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Info" asp-action="CovidInfo">
+        <img src="~/images/VirusMask.jpg" width="400" height="300" /></a>
+    </div>
+    <div class="col-md-2">
+        <p></p>
+    </div>
+        <div class="col-md-5">
+            <h4>Weather info :</h4>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Info" asp-action="Weather">
+                <img src="~/images/IMG_20191203_112619.jpg" width="400" />
+            </a>
+        </div>
+    </div>
