--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -5,7 +5,7 @@
 }
 <h1>Register</h1>
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-<form method="post" asp-action="Register">
+<form method="post"asp-controller="Account" asp-action="Register">
     <div class="form-group row">
         <div class="col-sm-2"><label>Username:</label></div>
         <div class="col-sm-4">
