--- a/Views/Event/EditProposal.cshtml
+++ b/Views/Event/EditProposal.cshtml
@@ -28,7 +28,7 @@
     <input type="hidden" asp-for="ProposalID" value=@Model.ProposalID />
 
     <button type="submit" class="btn btn-primary">@ViewBag.Action</button>
-    <a asp-controller="Event" asp-action="EditProposal"
+    <a asp-controller="Event" asp-action="Proposal"
        class="btn btn-primary">Cancel</a>
 </form>
 @*  <input type="hidden" asp-for="Name" value=@User.Identity.Name />  removed from the story model*@
