--- a/Views/Post/AddComment.cshtml
+++ b/Views/Post/AddComment.cshtml
@@ -12,7 +12,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form asp-controller="Post" asp-action="Comment" method="post">
+<form method="post" asp-controller="Post" asp-action="AddComment" >
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
