--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -29,7 +29,7 @@
                         <td>@events.EventTitle</td>                        
                         <td>@events.EventText</td>
                        
-                        @if (events.Member.UserName != null)
+                        @if (events.Member != null)
                         {
                             <td>@events.Member.UserName</td>
                         }
