--- a/Views/Event/AddEvent.cshtml
+++ b/Views/Event/AddEvent.cshtml
@@ -6,7 +6,7 @@
 
 <div class="col-md-10 mx-auto py-4">
     <div class="card">
-        <div class="card-header bg-primary text-uppercase text-white">
+        <div class="card-header bg-success text-uppercase text-white">
             <h4>Add New </h4>
         </div>
         <div class="card-body">
@@ -36,8 +36,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="submit" class="btn btn-sm btn-primary rounded-0 text-uppercase" />
-                    <a asp-action="Index" class="btn btn-sm btn-primary rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to List</a>
+                    <input type="submit" value="submit" class="btn btn-sm btn-success rounded-0 text-uppercase" />
+                    <a asp-action="Index" class="btn btn-sm btn-warning rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to List</a>
                 </div>
             </form>
         </div>
