--- a/Views/Event/AddProposal.cshtml
+++ b/Views/Event/AddProposal.cshtml
@@ -2,15 +2,15 @@
 @{
     ViewData["Title"] = "Add Post";
 }
-<h1>Add  Page</h1>
+<h1>Add Proposal Page</h1>
 
 <div class="col-md-10 mx-auto py-4">
     <div class="card">
-        <div class="card-header bg-primary text-uppercase text-white">
-            <h4>Add New </h4>
+        <div class="card-header bg-success  text-uppercase text-white">
+            <h4>Add New Proposal</h4>
         </div>
         <div class="card-body">
-            <form method="post" asp-action="AddProposal">
+            <form method="post" asp-controller="Event" asp-action="AddProposal">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
@@ -22,9 +22,9 @@
 
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label asp-for="ProposalTitle" class="control-label"></label>
-                            <input asp-for="ProposalTitle" class="form-control" />
-                            <span asp-validation-for="ProposalTitle" class="text-danger"></span>
+                            <label asp-for="ProposalText" class="control-label"></label>
+                            <input asp-for="ProposalText" class="form-control" />
+                            <span asp-validation-for="ProposalText" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -36,8 +36,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="submit" class="btn btn-sm btn-primary rounded-0 text-uppercase" />
-                    <a asp-action="Proposal" class="btn btn-sm btn-primary rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to List</a>
+                    <input type="submit" value="submit" class="btn btn-sm btn-success rounded-0 text-uppercase" />
+                    <a asp-action="Proposal" class="btn btn-sm btn-warning rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to List</a>
                 </div>
             </form>
         </div>
