--- a/Views/Post/Index.cshtml
+++ b/Views/Post/Index.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Story";
 }
-
+<br />
+<br />
 <h2>Tell us about your hiking adventures.</h2>
 
 <a asp-controller="Post" asp-action="AddPost">Add your adventure!</a>
@@ -10,7 +11,10 @@
     <thead>
 
     </thead>
+
     <tbody>
+
+
         @if (Model != null)
         {
             @foreach (var post in Model)
@@ -28,8 +32,8 @@
                     <td>
                         <img src="~/images/@post.ProfilePicture"
                              class=""
-                             height="100" width="100"
-                             asp-append-version="true" />
+                              width="150"
+                             asp-append-version="true" /><br />
                         @post.Member.UserName
                     </td>
                     <td>@post.PostTitle</td>
@@ -47,12 +51,12 @@
                     <td>
                         @if (User.IsInRole("Admin"))
                         {
-                        <a asp-controller="Post" asp-action="Edit"
-                           asp-route-id="@post.PostID"
-                           asp-route-slug="@post.Slug">Edit</a>
-                        <a asp-controller="Post" asp-action="Delete"
-                           asp-route-id="@post.PostID"
-                           asp-route-slug="@post.Slug">Delete</a>
+                            <a asp-controller="Post" asp-action="Edit"
+                               asp-route-id="@post.PostID"
+                               asp-route-slug="@post.Slug">Edit</a>
+                            <a asp-controller="Post" asp-action="Delete"
+                               asp-route-id="@post.PostID"
+                               asp-route-slug="@post.Slug">Delete</a>
                         }
                         <a asp-controller="Post" asp-action="AddComment"
                            asp-route-id="@post.PostID"
@@ -69,23 +73,30 @@
                     </tr>
                     @foreach (CommentModel comment in post.Comments)
                     {
-                        <tr>
-                            <td></td>
-                            <td>
-                                <strong>-</strong>
-                                @comment.CommentText
-                            </td>
-                            <td>
-                                <strong>Posted By:</strong>
-                                @comment.Member.Name
-                            </td>
-                            <td>
-                                <strong>When:</strong>
-                                @comment.CommentDate
-                            </td>
-
-
-                        </tr>
+    <tr>
+        <td></td>
+        <td>
+            <strong>-</strong>
+            @comment.CommentText
+        </td>
+        <td>
+            <strong>Posted By:</strong>
+            @comment.Member.Name
+        </td>
+        <td>
+            <strong>When:</strong>
+            @comment.CommentDate
+        </td>
+        <td></td>
+        <td>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a color="red" asp-controller="Post" asp-action="DeleteComment"
+                   asp-route-id="@comment.CommentId"
+                    asp-route-slug="@post.Slug">Delete Comment</a>
+            }
+            </td>
+</tr>
                     }
                 }
             }
