--- a/Views/Shared/Login.cshtml
+++ b/Views/Shared/Login.cshtml
@@ -41,7 +41,11 @@
     </div>
     <div class="row">
         <div class="offset-2 col-sm-4">
-            <button type="submit" class="btn btn-primary">Log In</button>
+            <button type="submit" class="btn btn-success">Log In</button>
+        </div> 
+        <div class="offset-2 col-sm-4">
+            <a asp-controller="Home" asp-action="Index"
+               class="btn btn-warning">Cancel</a>
         </div>
     </div>
     <div class="row">
